mongo-db/mongo-db-cli.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service 
  namespace: mongo-db 
spec:
  selector:
    app: mongo-db 
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
